--- a/.env.example
+++ b/.env.example
@@ -66,5 +66,5 @@ VITE_APP_NAME="${APP_NAME}"
 JWT_SECRET=
 
 KYC_SECRET_KEY=
-KYC_URL=
+SIMULATOR_URL=
 WEBHOOK_TRANSACTION_TOKEN_PILLARBANK_SECRET=
